apps/mail/stalwart/http-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: stalwart-http
  namespace: mail
spec:
  selector:
    app.kubernetes.io/name: stalwart
  ports:
    - name: http
      port: 8080
      targetPort: http
      protocol: TCP
