apps/mail/stalwart/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: stalwart
  namespace: mail
spec:
  parentRefs:
    - name: envoy-gateway
      namespace: envoy-gateway-system
      sectionName: https
  hostnames:
    - mail.kouidri.fr
  rules:
    - backendRefs:
        - name: stalwart
          port: 8080
